[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'dl-plus-extractor-un1def-rinsefm'
description = 'A dl-plus extractor plugin for Rinse FM internet radio'
readme = 'README.md'
license = {file = 'LICENSE'}
authors = [
    {name = 'un.def', email = 'me@undef.im'},
]
requires-python = '>= 3.8'
dependencies = [
    'dl-plus >= 0.6.0',
]
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/un-def/dl-plus-extractor-un1def-rinsefm'
Repository = 'https://github.com/un-def/dl-plus-extractor-un1def-rinsefm.git'

[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = 'dl_plus.extractors.un1def.rinsefm.__version__'}

[tool.isort]
lines_after_imports = 2
multi_line_output = 5
include_trailing_comma = true
use_parentheses = true
skip_glob = ['.*']
